# hashing

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  Hash.cpp  Hash.hpp  main.cpp
test/: CMakeLists.txt  HashCharsTest.cpp  HashConstructTest.cpp  HashHashTest.cpp  HashModulusTest.cpp
